syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetMe(GetMeRequest) returns (GetMeResponse);
  rpc SaveFcmToken(SaveFcmTokenRequest) returns (SaveFcmTokenResponse);
  rpc GetFirebaseToken(GetFirebaseTokenRequest) returns (GetFirebaseTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string code = 4;
}

message RegisterResponse {
  User user = 1;
  string token = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

message GetMeRequest {
  string user_id = 1;
}

message GetMeResponse {
  User user = 1;
}

message SaveFcmTokenRequest {
  string user_id = 1;
  string token = 2;
}

message SaveFcmTokenResponse {
  bool success = 1;
  string message = 2;
}

message GetFirebaseTokenRequest {
  string user_id = 1;
}

message GetFirebaseTokenResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string name = 4;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string avatar = 4;
  string role = 5;
  bool email_verified = 6;
}
